# StillToLifeBackground

./: .gitignore  README.md  pyproject.toml  run_web.py
.claude/: settings.local.json
docs/: macos-wallpaper-troubleshooting.md
scripts/: install_wallpaper.sh  make_wallpaper.sh  upscale_frames.py  wallpaper_watchdog.py
web/: app.py  jobs.py  processing.py  wallpaper.py
web/static/: app.js  index.html  style.css
